Add moderator role (#1512)
* Add moderator rank and actions

* Lower min requirement from regular to guest

* Replace palette with color presets

* Deepcopy admin commands for UI actions

* Populate RedMew command list for UI from command module

* Make command list private

* Load commands list after 1st request

* Improve scoping

* Implement Guide/Server page

* Fix missing localisations for admin commands

* implement Guide/Moderation wiki

* Formatting

* Open/close guide pages on secondary windows

--- a/locale/cs/redmew_features.cfg
+++ b/locale/cs/redmew_features.cfg
@@ -92,7 +92,7 @@ manual_mining_speed=Rychlost ručního těžení
 manual_crafting_speed=Rychlost manuálního craftění
 
 [chat_triggers]
-discord=Ptal se někdo na náš Discord server?\nMůžete jej najít zde: redmew.com/discord
+discord=Ptal se někdo na náš Discord server?\nMůžete jej najít zde: refactorio.de/discord
 patreon=Ptal se někdo na náš Patreon?\nMůžete jej najít zde: patreon.com/redmew
 donate=Ptal se někdo na darování serveru?\nZde najdete náš patreon: patreon.com/redmew
 grief=Abyste nahlásili griefery použijte /report.\nPokud nejsou žádní správci online použijte #helpdesk-and-moderation na našem discordu a nezapomeňte použít správný @mention.
