--- a/locale/de/redmew_features.cfg
+++ b/locale/de/redmew_features.cfg
@@ -91,7 +91,7 @@ manual_mining_speed=Manuelles Abbutempo
 manual_crafting_speed=Manuelles Herstelltempo
 
 [chat_triggers]
-discord=Haben Sie nach unserem Discord-Server gefragt?\nSie können ihn hier finden: redmew.com/discord
+discord=Haben Sie nach unserem Discord-Server gefragt?\nSie können ihn hier finden: refactorio.de/discord
 patreon=Hast du nach unserem Patreon gefragt?\nDu kannst Ihn hier finden: patreon.com/redmew
 donate=Hast du gefragt ob du dem Server spenden kannst?\nDu kannst unsere Patreon Seite hier finden: patreon.com/redmew
 mention_success=__1__ __2__ hat __3__ erwähnt!
