--- a/locale/en/redmew_common.cfg
+++ b/locale/en/redmew_common.cfg
@@ -36,6 +36,7 @@ probation=Probation
 guest=Guest
 auto_trusted=Auto Trusted
 regular=Regular
+moderator=Moderator
 admin=Admin
 donator=Donator
 donator_abbreviation=D
