--- a/locale/en/redmew_gui.cfg
+++ b/locale/en/redmew_gui.cfg
@@ -1,9 +1,9 @@
 # This file holds all the locale strings for guis
 
 [info]
-tooltip=Redmew Info
-welcome_header=Welcome to Redmew!
-welcome_text=Redmew is a community for players of all skill levels committed to pushing the limits of Factorio Multiplayer through custom scripts and crazy map designs.\n\nWe are a friendly bunch, our objective is to have as much fun as possible and we hope you will too.
+tooltip=[font=var][color=1,0.9,0.75]RedMew Info[/color][/font]\n Community, rules, features, map info
+welcome_header=Welcome to RedMew!
+welcome_text=RedMew is a community for players of all skill levels committed to pushing the limits of Factorio Multiplayer through custom scripts and crazy map designs.\n\nWe are a friendly bunch, our objective is to have as much fun as possible and we hope you will too.
 chatting_header=How To Chat
 chatting_text=To chat with other players, press the __CONTROL__toggle-console__ key on your keyboard.\nThe default key on English keyboards is the grave (`) and is below the ESC key.\nThis can be changed in __1__ -> __2__ -> __3__.
 free_coin_header=Free Coins
@@ -15,45 +15,86 @@ links_patreon=Contribute to our Patreon to receive special perks and help mainta
 links_saves=Download our maps, start and finish state, from our website.
 links_factoriomaps=View our past maps as a Google Map.
 rules_header=Rules
-rules_text=Have fun and play nice. Remember we are all just here to have fun so let's keep it that way.\n\nNo hateful content or personal attacks.\n\nIf you suspect someone is griefing, notify the admin team by using /report or by clicking the report button next to the player in the player list.
-rules_text_danger_ore=If another player's build needs to be modified or removed, there needs to be a team discussion or vote/poll before the modification or removal.\n\nA team discussion or vote/poll is not necessary if the player who built it is online and agrees to the modification or removal.\n\nMap wide module changing and belt upgrading must be voted on as a team before the changing or upgrading.\n\nIn the instance of a team vote/poll, the majority wins.\n\nOnly 1 or 2 players online are not enough for a team discussion or vote/poll. Yet, modification or removal of a build may be necessary to keep the base running smoothly. A message should be left on the in-game chat stating they are modifying or removing a build, and why it needs to be done. Simply stating your design or build is better or looks nicer isn't enough.
+rules_text=Have fun and play nice. Remember we are all just here to have fun so let`s keep it that way.\n\nNo hateful content or personal attacks.\n\nIf you suspect someone is griefing, notify the admin team by using /report or by clicking the report button next to the player in the player list.
+rules_text_danger_ore=If another player`s build needs to be modified or removed, there needs to be a team discussion or vote/poll before the modification or removal.\n\nA team discussion or vote/poll is not necessary if the player who built it is online and agrees to the modification or removal.\n\nMap wide module changing and belt upgrading must be voted on as a team before the changing or upgrading.\n\nIn the instance of a team vote/poll, the majority wins.\n\nOnly 1 or 2 players online are not enough for a team discussion or vote/poll. Yet, modification or removal of a build may be necessary to keep the base running smoothly. A message should be left on the in-game chat stating they are modifying or removing a build, and why it needs to be done. Simply stating your design or build is better or looks nicer is not enough.
 map_info_button=Map Info
 map_info_header=Map Information
 map_name_label=Map name:
 map_desc_label=Map description:
 map_extra_info_label=Extra Info:
-softmods_button=Scenario Mods
-softmods_header=Soft Mods and Server Plugins
-softmods_rank_text=We have a basic rank system to prevent griefing. You can't use nukes or the\ndeconstruction planner if you are a guest. If you play for a couple of hours an\nadmin will promote you to regular. You may also ask an admin for a promotion if\nyou're working on a project which requires it.\n
+softmods_button=Features
+softmods_header=Features & server plugins
+softmods_rank_text=We have a basic rank system to prevent griefing. You can`t use nukes or the deconstruction planner if you are a guest. If you play for a couple of hours an admin will promote you to regular. You may also ask an admin for a promotion if you are working on a project which requires it.\n
 softmods_rank_is=Your rank is:
 softmods_market_label=Market
-softmods_market_text=On most maps you will find a market near spawn where you can use coins to\nmake purchases. Coins are acquired by chopping trees, hand crafting items and\ndestroying biter nests. Most items in the market are constant but some are\nmap-specific (usually landfill) and will rotate in and out from time to time.
-softmods_saviour_label=Train\nsavior
-softmods_saviour_text=Trains are a factorio players' worst enemy. If you have at least one player port\nin your inventory and are killed by a train, your life will be spared\nbut you will lose a player port. You can get player ports from the market.
-softmods_plist_label=Player\nlist
-softmods_plist_text=Lists all players on the server and shows some stats. You can sort the list by\nclicking on the column headers. You can also poke people, which throws a random\nnoun in the chat.
+softmods_market_text=On most maps you will find a market near spawn where you can use coins to make purchases. Coins are acquired by chopping trees, hand crafting items and destroying biter nests. Most items in the market are constant but some are map-specific (usually landfill) and will rotate in and out from time to time.
+softmods_saviour_label=Train savior
+softmods_saviour_text=Trains are a factorio players` worst enemy. If you have at least one player port in your inventory and are killed by a train, your life will be spared but you will lose a player port. You can get player ports from the market.
+softmods_plist_label=Player list
+softmods_plist_text=Lists all players on the server and shows some stats. You can sort the list by clicking on the column headers. You can also poke people, which throws a random noun in the chat.
 softmods_polls_label=Polls
-softmods_polls_text=Polls help players get consensus for major actions. Want to improve an important\nbuild? Make a poll to check everyone is ok with that. You need to be a regular\nto make new polls.
+softmods_polls_text=Polls help players get consensus for major actions. Want to improve an important build? Make a poll to check everyone is ok with that. You need to be a regular to make new polls.
 softmods_tags_label=Tags
-softmods_tags_text=You can assign yourself a role with tags to let other players know what you are\ndoing. Or just use the tag as decoration. Regulars can create new custom tags,\nbe sure to show off your creatively.
+softmods_tags_text=You can assign yourself a role with tags to let other players know what you are doing. Or just use the tag as decoration. Regulars can create new custom tags, be sure to show off your creatively.
 softmods_tasks_label=Tasks
-softmods_tasks_text=Not sure what you should be working on, why not look at the tasks and see what\nneeds doing. Regulars can add new tasks.
+softmods_tasks_text=Not sure what you should be working on, why not look at the tasks and see what needs doing. Regulars can add new tasks.
 softmods_bp_label=BP\nhelper
 softmods_bp_text=The Blueprint helper™ lets you flip blueprints horizontally or vertically and lets you\nconverter the entities used in the blueprint e.g. turn yellow belts into red belts.
 softmods_score_label=Score
-softmods_score_text=Shows number of rockets launched and biters liberated.
-whats_new_button=What's New
+softmods_score_text=Shows number of rockets launched, biters liberated, entities built and much more!
+softmods_shortcuts_label=Shortcuts
+softmods_shortcuts_text=Player shortcuts are easy-to-access buttons that provide useful tools to the player. Clear biter bodies from the ground, sort your inventory into neraby chests/furnaces, recharge your equipped batteries from nearby accumulators and much more.
+softmods_production_hud_label=Prod. HUD
+softmods_production_hud_text=The production HUB is a production stats window that can be kept on screen all the time. Add/remove items from the tracked list and make sure the factory is well fed!
+softmods_train_station_teleport_label=Teleporter
+softmods_train_station_teleport_text=The Train Station Teleport allows player to instantly teleport between [entity=train-stop] across the map. All you need to do is stand nearby a [entity=train-stop] and from map view, open another [entity=train-stop] and teleport to it with its teleport button.
+softmods_autofill_label=Autofill
+softmods_autofill_text=Automatically drop ammos when building turrets. Can be configured to filter the ammo types and quantity.
+softmods_paint_brush_label=Paint brush
+softmods_paint_brush_text=The factory must grow! ...with style
+whats_new_button=What`s New
+
+[cmd_tooltip]
+cheat_mode=Toggle cheat mode for yourself ON/OFF
+show_reports=Open the reports window
+toggle_blueprints=Enable/disable blueprints for all
+create_pool=Create a 3x3 water pool below your character`s position
+create_oil_field=Create a 3x3 square of [entity=crude-oil] __ENTITY__crude-oil__
+spawn_pollution=Create a pollution cloud at your current position
+save_game=Autosave current game on server-side
+revive_ghosts=Revive all ghosts on your surface
+kill_units=Kill all biter units (no nests or worms)
+destroy_speakers=Destroy all speakers (all surfaces)
+destroy_ghosts=Destroy all ghosts (all surfaces)
+kill_enemies=Kill all enemies (units, nests, worms)
+add_probation=Add someone to the probation list \n([img=utility/custom_tag_icon])
+add_regular=Give someone the regular rank \n([img=utility/custom_tag_icon])
+jail_player=Jail someone \n([img=utility/custom_tag_icon])
+remove_probation=Removes someone from the probation list \n([img=utility/custom_tag_icon])
+remove_regular=Demotes someone from regular \n([img=utility/custom_tag_icon])
+unjail_player=Unjail someone \n([img=utility/custom_tag_icon])
+mute_player=Mute someone \n([img=utility/custom_tag_icon])
+unmute_player=Unnmute someone \n([img=utility/custom_tag_icon])
+add_moderator=Give someone the moderator rank \n([img=utility/custom_tag_icon])
+remove_moderator=Demotes someone from moderator \n([img=utility/custom_tag_icon])
+trust_all=Give everyone online the regular rank \n([img=utility/custom_tag_icon])
+invoke_player=Teleport someone to your position \n([img=utility/custom_tag_icon])
+goto_player=Go to someone`s position \n([img=utility/custom_tag_icon])
+spank_player=Slightly damages a player with a poke message \n([img=utility/custom_tag_icon])
+kick_player=Kick someone from the current game \n([img=utility/custom_tag_icon])
+ban_player=Ban someone from this game and all RedMew servers \n([img=utility/custom_tag_icon])
+purge_player=Purges the given players messages from the game \n([img=utility/custom_tag_icon])
 
 [redmew_settings_gui]
-tooltip=Your Redmew settings
+tooltip=[font=var][color=1,0.9,0.75]Settings[/color][/font]\n Your RedMew Settings across all servers
 save_success_toast_message=Your settings have been updated!
-frame_title=Redmew Settings
+frame_title=RedMew Settings
 button_cancel=Cancel
 button_save_changes=Save changes
-setting_info=When playing on a Redmew server, these settings will synchronize to other Redmew servers.
+setting_info=When playing on a RedMew server, these settings will synchronize to other RedMew servers.
 
 [player_list]
-tooltip=Player list
+tooltip=[font=var][color=1,0.9,0.75]Player list[/color][/font]\n View player stats, ranks, playtime
 title=Player list - Online: __1__ Total: __2__
 name_caption=Name __1__
 time_caption=Time __1__
@@ -76,13 +117,10 @@ toast_player=__1__ sent a toast to __2__.
 toast_volume_setting_label=Toast message volume
 
 [evolution_progress]
-tooltip=Alien evolution progress
-
-[paint]
-tooltip=Refined concrete painting tool
+tooltip=[font=var][color=1,0.9,0.75]Evolution[/color][/font]\n Alien evolution progress (0-100)
 
 [tag_group]
-tooltip=Player tag group management
+tooltip=[font=var][color=1,0.9,0.75]Tags[/color][/font]\n Player tag group management
 notify_caption=Notify me when tag groups change.
 notify_caption_short=Notify tag groups.
 notify_tooltip=Receive a message when a player enters or leaves a tag group or when a tag group is created, edited or deleted.
@@ -106,16 +144,16 @@ tag_does_not_exist=Tag __1__ does not exist. Create the tag first by clicking Ta
 player_already_has_tag=__1__ already has __2__ tag.
 
 [poll]
-tooltip=View and manage polls
+tooltip=[font=var][color=1,0.9,0.75]Polls[/color][/font]\n View and manage polls
 notify_caption=Notify me about polls.
 notify_caption_short=Notify polls.
 notify_tooltip=Receive a message when new polls are created and popup the poll.
 
 [score]
-tooltip=Score
+tooltip=[font=var][color=1,0.9,0.75]Score[/color][/font]\n Check the game`s statistics
 
 [tasklist]
-tooltip=View and manage Tasks
+tooltip=[font=var][color=1,0.9,0.75]Tasks[/color][/font]\n View and manage announcements, tasks
 notify_caption=Notify me about new announcements or tasks.
 notify_caption_short=Notify announcements / tasks.
 notify_tooltip=Receive a message when tasks or announcements are created or edited.
@@ -125,7 +163,7 @@ default_title=NOTICE!
 confirm_btn=OK
 
 [player_shortcuts]
-info_tooltip=[font=default-bold]Player shortcuts[/font] - Toggle your shortcuts bar
+info_tooltip=[font=var][color=1,0.9,0.75]Shortcuts[/color][/font]\n  Toggle your shortcuts bar
 settings_tooltip=[font=default-bold]Settings[/font] - Customize your shortcut bar
 clear_corpses_caption=Clear corpses
 clear_corpses_tooltip=[font=default-bold]Clear corpses[/font] - Clear biter corpses around you
@@ -135,7 +173,7 @@ auto_stash_caption=Auto stash
 auto_stash_tooltip=[font=default-bold]Auto stash[/font] - Sort your inventory into nearby chests.\n[color=yellow][font=default-bold]LMB[/font][/color]: Everything, excluding quickbar items.\n[color=yellow][font=default-bold]RMB[/font][/color]: Only ores to nearby chests, excluding quickbar items.\n[color=yellow][font=default-bold]CTRL + RMB[/font][/color]: Fill nearby furnaces.\n[color=yellow][font=default-bold]SHIFT + LMB[/font][/color]: Everything onto filtered slots to wagon/chests.\n[color=yellow][font=default-bold]SHIFT + RMB[/font][/color]: Only ores to wagon.
 
 [admin_panel]
-info_tooltip=[font=default-bold]Admin panel[/font] - Toggle your admin panel
+info_tooltip=[font=var][color=1,0.9,0.75]Admin panel[/color][/font]\n Manage players, map, commands
 
 [experience]
 float_xp_drain=-__1__ XP
