--- a/locale/es-ES/redmew_features.cfg
+++ b/locale/es-ES/redmew_features.cfg
@@ -92,7 +92,7 @@ manual_mining_speed=Velocidad manual de minería
 manual_crafting_speed=Velocidad manual de fabricación
 
 [chat_triggers]
-discord=¿Te preguntaste sobre nuestro servidor discord?\nPuedes encontrarlo aquí: redmew.com/discord
+discord=¿Te preguntaste sobre nuestro servidor discord?\nPuedes encontrarlo aquí: refactorio.de/discord
 patreon=¿Te preguntaste sobre nuestra patreon?\nPuedes encontrarla aquí: patreon.com/redmew
 donate=¿Te preguntaste sobre la donación al servidor?\nPuedes encontrar nuestro patreon aquí: patreon.com/redmew
 
