--- a/locale/fi/redmew_features.cfg
+++ b/locale/fi/redmew_features.cfg
@@ -92,7 +92,7 @@ manual_mining_speed=Käsi kaivamis nopeus
 manual_crafting_speed=Manuaalinen nikkarointi nopeus
 
 [chat_triggers]
-discord=Kysyitkö meidän discord palvelimelta?\nLöydät sen täältä: redmew.com/discord
+discord=Kysyitkö meidän discord palvelimelta?\nLöydät sen täältä: refactorio.de/discord
 patreon=Kysyitkö meidän suojelusta?\nLöydät sen täältä: patreon.com/redmew
 donate=Kysyitkö lahjoittamista palvelimelle?\nLöydät meidän suojelijamme täältä: patreon.com/redmew
 grief=Jos haluat ilmoittaa surusta, käytä /report -toimintoa.\nJos kukaan ylläpitäjä ei ole online-käytössä #helpdesk-and-moderation discord ja varmista, että @mainitse sopiva rooli.
