--- a/locale/fr/redmew_features.cfg
+++ b/locale/fr/redmew_features.cfg
@@ -89,7 +89,7 @@ manual_mining_speed=Vitesse de minier manuelle
 manual_crafting_speed=Vitesse d'artisanat manuelle
 
 [chat_triggers]
-discord=Vous avez demandé notre serveur discord?\nVous pouvez le trouver ici: redmew.com/discord
+discord=Vous avez demandé notre serveur discord?\nVous pouvez le trouver ici: refactorio.de/discord
 patreon=Vous avez demandé notre Patreon?\nVous pouvez le trouver ici: patreon.com/redmew
 donate=Vous avez demandé doner au le serveur?\nVous pouvez le trouver ici: patreon.com/redmew
 grief=Pour signaler le chagrin, veuillez utiliser la fonction /report.\nSi aucun admins n'est utilisé en ligne #helpdesk-and-moderation sur la discord et assurez-vous que @mention le rôle approprié.
