--- a/locale/nl/redmew_features.cfg
+++ b/locale/nl/redmew_features.cfg
@@ -87,7 +87,7 @@ manual_mining_speed=Handmatige mijnsnelheid
 manual_crafting_speed=Handmatige vervaardigingssnelheid
 
 [chat_triggers]
-discord=Vroeg je naar onze discord server?\nU kunt het hier vinden: redmew.com/discord
+discord=Vroeg je naar onze discord server?\nU kunt het hier vinden: refactorio.de/discord
 patreon=Vroeg je naar onze patreon?\nU kunt het hier vinden: patreon.com/redmew
 mention_success=__1__ __2__ heeft __3__ genoemd!
 mention_fail_mention_self=__1__ kan jezelf niet vermelden!
