--- a/locale/no/redmew_features.cfg
+++ b/locale/no/redmew_features.cfg
@@ -92,7 +92,7 @@ manual_mining_speed=Manuel mining hastighet
 manual_crafting_speed=Manuel crafting hastighet
 
 [chat_triggers]
-discord=Spurte du om vår discord server?\nDu kan finne den her: redmew.com/discord
+discord=Spurte du om vår discord server?\nDu kan finne den her: refactorio.de/discord
 patreon=Spurte du om vår patreon?\nDu kan finne den her: patreon.com/redmew
 donate=Spurte du om å donere til serveren?\nDu kan finne vår patreon her: patreon.com/redmew
 grief=For å rapportere grief, vennligst bruk /report funksjonen.\nhvis ikke admins er online, bruk #helpdesk-and-moderation på discord og sørg for å @mention riktig rolle.
