--- a/locale/pt-BR/redmew_features.cfg
+++ b/locale/pt-BR/redmew_features.cfg
@@ -92,7 +92,7 @@ manual_mining_speed=Velocidade de mineração manual
 manual_crafting_speed=Velocidade de criação manual
 
 [chat_triggers]
-discord=Você perguntou sobre o nosso servidor de discord?\nVocê pode encontrá-lo aqui: redmew.com/discord
+discord=Você perguntou sobre o nosso servidor de discord?\nVocê pode encontrá-lo aqui: refactorio.de/discord
 patreon=Você perguntou sobre o nosso patreon?\nVocê pode encontrá-lo aqui: patreon.com/redmew
 donate=Você perguntou sobre fazer uma doação para o servidor?\nVocê pode encontrar nosso patreon aqui: patreon.com/redmew
 grief=Para reportar grief, por favor use a função /report.\nSe nenhum administrador estiver online use #helpdesk-and-moderation no Discord e certifique-se de @mention o cargo apropriado.
