--- a/locale/ru/redmew_features.cfg
+++ b/locale/ru/redmew_features.cfg
@@ -92,7 +92,7 @@ manual_mining_speed=Скорость ручной добычи
 manual_crafting_speed=Скорость создания вручную
 
 [chat_triggers]
-discord=Вы спрашивали о нашем сервере discord?\nВот его адрес: redmew.com/discord
+discord=Вы спрашивали о нашем сервере discord?\nВот его адрес: refactorio.de/discord
 patreon=Вы спрашивали как нам помочь?\nВы сможете нам помочь с помощью Patreon: patreon.com/redmew
 donate=Вы спрашивали о пожертвовании серверу?\nВы можете найти наш патрон здесь: patreon.com/redmew
 grief=Чтобы сообщить о неприятности, используйте /report функцию.\nЕсли нет администраторов на сервере, то используйте канал в Дискорде #helpdesk-and-moderation и убедитесь, что @mention соответствующую роль.
