--- a/locale/zh-CN/redmew_features.cfg
+++ b/locale/zh-CN/redmew_features.cfg
@@ -92,7 +92,7 @@ manual_mining_speed=手动挖掘速度
 manual_crafting_speed=手动制作速度
 
 [chat_triggers]
-discord=你想加入我们的Discord服务器吗？\n你可以在这里找到它：redmew.com/discord
+discord=你想加入我们的Discord服务器吗？\n你可以在这里找到它：refactorio.de/discord
 patreon=你想访问我们的众筹网站吗？\n你可以在这里找到它：patreon.com/redmew
 donate=你想向服务器捐赠吗？\n你可以在这里找到我们的众筹网站：patreon.com/redmew
 grief=要报告悲伤，请使用 /report 功能。\n如果没有管理员在线使用，请在不和时使用 #helpdesk-and-moderation，确保@提及合适的角色。
