--- a/locale/en/redmew_features.cfg
+++ b/locale/en/redmew_features.cfg
@@ -23,7 +23,7 @@ probation_remove_fail=__1__ is not on probation.
 invoke_fail_no_location=Unable to find suitable location to teleport your target to.
 invoke_announce=__1__, get your ass over here!
 tp_fail_no_location=Unable to find suitable location to teleport to.
-tp_player_announce=__1__! watcha doin'?!
+tp_player_announce=__1__! watcha doin`?!
 tp_player_success=You have teleported to __1__
 tp_ent_fail_no_ent=No entity under cursor.
 tp_end_success=Teleporting to your selected entity.
@@ -33,14 +33,25 @@ destroy_success=__1__ destroyed
 destroy_fail=Nothing found to destroy. (You must have an entity under your cursor when you hit enter)
 revive_ghosts=Revived __1__ ghost(s).
 create_pool=Ready to swim!
+purge_player_success=__1__`s messages have been succesfully removed from the chat log.
+moderator_add_success=__1__ promoted __2__ to moderator.
+moderator_add_notify_target=You have been promoted to moderator. This rank grants access to certain administrative and moderation commands. Use /help to explore what is now available to you.
+moderator_add_fail=__1__ is already rank __2__.
+moderator_add_fail_low_rank=Cannot promote someone on probation to moderator. You must remove them from probation and then promote them.
+moderator_remove_success=__1__ demoted __2__ to __3__.
+moderator_remove_notify_target=Your moderator rank has been removed.
+moderator_remove_fail=__1__ is rank __2__, their moderator status cannot be removed.
+regular_add_all_null=Cannot run this command while there is nobody else here.
+regular_add_all_fail=Something went wrong.
+regular_add_all_count=[color=__1__][font=default-bold]Success: __2__[/font][/color]
 
 [redmew_commands]
-kill_fail_suicide_no_character=Sorry, you don't have a character to kill.
-kill_fail_target_no_character=Sorry, __1__ doesn't have a character to kill.
-kill_fail_no_perm=Sorry you don't have permission to use the kill command on other players.
+kill_fail_suicide_no_character=Sorry, you don`t have a character to kill.
+kill_fail_target_no_character=Sorry, __1__ doesn`t have a character to kill.
+kill_fail_no_perm=Sorry you don`t have permission to use the kill command on other players.
 afk_no_afk=No players afk.
 zoom_fail=You must give zoom a number.
-find_player_fail_no_character=Sorry, __1__ doesn't have a character to find.
+find_player_fail_no_character=Sorry, __1__ doesn`t have a character to find.
 show_rail_block_success=show_rail_block_visualisation set to __1__
 server_time_fail=Server time is not available, is this game running on a Redmew server?
 print_version_from_source=This map was created from source code, only releases (zips with names) and server saves have versions
@@ -96,19 +107,19 @@ manual_mining_speed=Manual mining speed
 manual_crafting_speed=Manual crafting speed
 
 [chat_triggers]
-discord=Did you ask about our discord server?\nYou can find it here: redmew.com/discord
+discord=Did you ask about our discord server?\nYou can find it here: refactorio.de/discord
 patreon=Did you ask about our patreon?\nYou can find it here: patreon.com/redmew
 donate=Did you ask about donating to the server?\nYou can find our patreon here: patreon.com/redmew
 grief=To report grief please use the /report function.\nIf no admins are online use #helpdesk-and-moderation on the discord and make sure the @mention the appropriate role.
 mention_success=__1__ __2__ mentioned __3__!
 mention_success_target=__1__ __2__ mentioned you!
 mention_success_target_floating=__1__ mentioned you in the chat!
-mention_fail_mention_self=__1__ Can't mention yourself!
+mention_fail_mention_self=__1__ Can`t mention yourself!
 mention_not_found_plural=__1__ Players not found: __2__
 mention_not_found_singular=__1__ Player not found: __2__
 
 [player_onboarding]
-teach_toast=This is a feature in Redmew called a toast!\nThey're little pieces of information that pop up.\nYou can dismiss it by waiting or by clicking on it.
+teach_toast=This is a feature in Redmew called a toast!\nThey`re little pieces of information that pop up.\nYou can dismiss it by waiting or by clicking on it.
 teach_chat=To chat with other players, press the __CONTROL__toggle-console__ key on your keyboard.\nThe default key on English keyboards is the grave (`) and is below the ESC key.\nThis key can be changed in __1__ -> __2__ -> __3__.
 
 [retailer]
@@ -124,7 +135,7 @@ item_disabled_reason=__1__ is disabled. __2__
 no_inventory_space=Insufficient inventory space
 
 [biter_attacks]
-first_rocket_launch_attack=The ground rumbles as the first rocket is launched.. But there's more.. The rocket is out of sight but the ground continues to tremble. An attack is coming, bigger than any previous.
+first_rocket_launch_attack=The ground rumbles as the first rocket is launched.. But there`s more.. The rocket is out of sight but the ground continues to tremble. An attack is coming, bigger than any previous.
 rocket_launch_attack=The locals launch another attack as our next rocket takes off.
 biter_command_success=An attack against __1__ has been ordered.
 
@@ -138,7 +149,7 @@ incompatible_item=Incompatible item found in saved data and will not be loaded: 
 save_bars=Your logistic requests have been saved to the server.
 load_bars=Attempting to load logistic requests from server...
 delete_bars=Saved data has been removed from the server.
-logistics_not_available=Command failed: player's logistics not available
+logistics_not_available=Command failed: player`s logistics not available
 incompatible_item=Incompatible item found in saved data and will not be loaded: __1__
 
 [player_stats]
@@ -172,7 +183,7 @@ enable=Enable autofill
 enabled_ammos=Enabled ammo types
 ammo_count=Autofill ammo count
 invalid_ammo_count=ammo count must be a positive integer
-main_button_tooltip=Autofill settings
+main_button_tooltip=[font=var][color=1,0.9,0.75]Autofill[/color][/font]\n Set ammo type & quantity
 frame_name=Autofill
 
 [research_printer]
@@ -184,6 +195,7 @@ spawn_snake_fail=Unable to spawn snake, please try again.
 snake_destroyed=__1__ has been destroyed with a score of __2__.
 
 [paint]
+tooltip=[font=var][color=1,0.9,0.75]Paint brush[/color][/font]\n A touch of color to the factory!
 frame_name=Paint Brush
 clear_brush=Clear Brush
 palette=Palette
@@ -233,9 +245,32 @@ offers_tooltip=Select an item that will be provided
 item_tooltip=This item is worth __1__ [img=item/coin] __plural_for_parameter__1__{1=coin|rest=coins}__
 
 [production_hud]
-feature_tooltip=Production HUD
+feature_tooltip=[font=var][color=1,0.9,0.75]Production HUD[/color][/font]\n Keep an eye on your factory all the time
 item_tooltip=__1__\n__CONTROL_RIGHT_CLICK__ to remove
 new_item_tooltip=__CONTROL_LEFT_CLICK__ to add new item
 err_invalid_item=[color=blue][Production HUD][/color] Invalid item selected. Please select another item or fluid to track.
 err_item_already_present=[color=blue][Production HUD][/color] Item already tracked. Please select another item or fluid to track.
 err_limit_reached=[color=blue][Production HUD][/color] You have reached the limit of __1__ items to track. Please remove some before you add any new ones. 
+
+[redmew_wiki]
+admin_panel=The Admin panel collects all sort of tools useful for moderation, map management, server management and development
+moderation_guide=The moderation guide collects all the information regarding RedMew servers and how they work
+guide_ranks=Ranks are a simple system to prevent griefing and help moderate RedMew maps
+guide_moderation=The moderadion guide is a simple tool that collects an overview of all the features in the Admin panel
+guide_commands=A comprehensive list of all commands available in game
+guide_server=A comprehensive list of all the console snippets and server procedures to help maintain the RedMew servers
+guide_resources=A reference to outside resources, GitHub, Web page of RedMew
+player_manager=The main tool for multiplayer moderation and command shortcuts
+player_general_actions=A collection of commands to help managing the map overall, execute word manipulation to help the scenario get by
+player_management=A collection of moderation action that target one or all players. \nUse promotions and demotions as needed to help de-escalate the most difficult situations. \nMute, purge, spank, invoke to resole issues first hand with the involved players.
+player_kick_and_ban=An helper window to kick/ban players with reason and reference the issue to our main portal. \nCheck the reasons or add directly in the textbox to compile the report.
+map_manager=A collection of tools to manipulate the environment around you
+map_game_speed=Use performance speed to reduce game speed without nerfing player statistics. \nSlow down/speed up to act directly on server speed
+map_pollution=Edit map pollution settings
+map_evolution=Edit map evolution settings
+map_expansion=A collection of helper methods to scout, clear, cover the map around you
+lua_console=A large console tool for our devs!
+lua_description=Onboarding on lua console tool
+lua_input=Text area to craft some spicy commands
+lua_output=Result of the commands and buttons to dry-run the command (test syntax) and execute command (test+execute instructions)
+empty_entry=No item selected. Please select an item to view its information overview.
