updated info screen

--- a/locale/en/redmew_gui.cfg
+++ b/locale/en/redmew_gui.cfg
@@ -2,20 +2,16 @@
 
 [info]
 tooltip=[font=var][color=1,0.9,0.75]RedMew Info[/color][/font]\n Community, rules, features, map info
-welcome_header=Welcome to RedMew!
-welcome_text=RedMew is a community for players of all skill levels committed to pushing the limits of Factorio Multiplayer through custom scripts and crazy map designs.\n\nWe are a friendly bunch, our objective is to have as much fun as possible and we hope you will too.
+welcome_header=Welcome to Diggy!
+welcome_text=This custom scenario was created by the RedMew community and modified by DieBohne.
 chatting_header=How To Chat
 chatting_text=To chat with other players, press the __CONTROL__toggle-console__ key on your keyboard.\nThe default key on English keyboards is the grave (`) and is below the ESC key.\nThis can be changed in __1__ -> __2__ -> __3__.
 free_coin_header=Free Coins
 free_coin_text=You have been given __1__ __2__ for looking at the welcome tab.\nChecking each tab will reward you __1__ more __2__.\n
 free_coin_print=__1__ __2__ awarded for reading a tab on the info screen.
 links_header=Useful Links
-links_discord=Check out our discord for new map info and to suggest new maps / ideas.
-links_patreon=Contribute to our Patreon to receive special perks and help maintain our servers.
-links_saves=Download our maps, start and finish state, from our website.
-links_factoriomaps=View our past maps as a Google Map.
 rules_header=Rules
-rules_text=Have fun and play nice. Remember we are all just here to have fun so let`s keep it that way.\n\nNo hateful content or personal attacks.\n\nIf you suspect someone is griefing, notify the admin team by using /report or by clicking the report button next to the player in the player list.
+rules_text=Have fun and play nice. Remember we are all just here to have fun so let`s keep it that way.\n\nNo hateful content or personal attacks.
 rules_text_danger_ore=If another player`s build needs to be modified or removed, there needs to be a team discussion or vote/poll before the modification or removal.\n\nA team discussion or vote/poll is not necessary if the player who built it is online and agrees to the modification or removal.\n\nMap wide module changing and belt upgrading must be voted on as a team before the changing or upgrading.\n\nIn the instance of a team vote/poll, the majority wins.\n\nOnly 1 or 2 players online are not enough for a team discussion or vote/poll. Yet, modification or removal of a build may be necessary to keep the base running smoothly. A message should be left on the in-game chat stating they are modifying or removing a build, and why it needs to be done. Simply stating your design or build is better or looks nicer is not enough.
 map_info_button=Map Info
 map_info_header=Map Information
