renamed /redmew-version to /diggy-version and changed text on player joined the game

--- a/locale/cs/redmew_command_text.cfg
+++ b/locale/cs/redmew_command_text.cfg
@@ -16,7 +16,7 @@ find=Ukáže upozornění na mapě, kde se hráč nachází
 show_rail_block=Vypne/zapne vizualizaci bloků železnice.
 server_time=Vypíše serverový čas.
 seeds=Vypíše seed pro každý surface
-redmew_version=Vypíše verzi RedMew scénáře
+redmew_version=Vypíše verzi Diggy scénáře
 whois=poskytuje informace o daném hráči, správci mohou vidět inventář hráče přidáním „yes“ jako druhý argument
 meltdown_get=Zjistí jestli roztavení reaktorů zapnuto.
 meltdown_set=Nastaví jestli roztavení reaktorů zapnuto.
