--- a/locale/es-ES/redmew_command_text.cfg
+++ b/locale/es-ES/redmew_command_text.cfg
@@ -16,7 +16,7 @@ find=Muestra una alerta en el mapa donde se encuentra el jugador
 show_rail_block=Mostrar visualización de los bloques de rieles.
 server_time=Imprime el tiempo del servidor.
 seeds=Listar las semillas de todas las superficies
-redmew_version=Imprime la versión del escenario Redmew
+redmew_version=Imprime la versión del escenario Diggy
 whois=da información sobre un jugador dado, los administradores pueden ver el inventario de un jugador añadiendo ""sí"" como un segundo argumento
 meltdown_get=Obtiene el estado de la fusión.
 meltdown_set=Establece el estado de la fusión.
