--- a/locale/fi/redmew_command_text.cfg
+++ b/locale/fi/redmew_command_text.cfg
@@ -16,7 +16,7 @@ find=Näyttää hälytykset kartalla missä pelaaja on.
 show_rail_block=Valitse rataosuuksien visalisointi.
 server_time=Tulosta serverin aika.
 seeds=Luettele kaikkien pintojen siemenet
-redmew_version=Tulosta RedMew senario versio.
+redmew_version=Tulosta Diggy senario versio.
 whois=Antaa tietoa tietystä pelaajasta, ylläpitäjät voivat nähdä pelaajan luettelon lisäämällä ""kyllä"" toisena argumenttina
 meltdown_get=Hae valinta sulamiselle.
 meltdown_set=Aseta valinta sulamiselle.
