--- a/locale/fr/redmew_command_text.cfg
+++ b/locale/fr/redmew_command_text.cfg
@@ -16,7 +16,7 @@ find=Affiche une alerte sur la carte où le joueurs est localisé
 show_rail_block=Basculer la visualisation des tronçons ferroviaires.
 server_time=Affiche l'heure du serveur.
 seeds=Liste des seeds de toutes les surfaces
-redmew_version=Affiche la version du scénario Redmew
+redmew_version=Affiche la version du scénario Diggy
 whois=Fournit des informations sur un joueur donné, les administrateurs peuvent voir l'inventaire d'un joueur en ajoutant ""oui"" comme second argument
 meltdown_get=Récupère le statut de la fusion.
 meltdown_set=Définit l'état de la fusion.
