--- a/locale/nl/redmew_command_text.cfg
+++ b/locale/nl/redmew_command_text.cfg
@@ -16,7 +16,7 @@ find=Toont een melding op de kaart waar de speler zich bevindt
 show_rail_block=Schakelt de visualisatie van het spoorblok an/uit.
 server_time=Laat de tijd op de server zien.
 seeds=Toon de radom-zaden van alle kaarten
-redmew_version=Toont de versie van het Redmew scenario
+redmew_version=Toont de versie van het Diggy scenario
 whois=geeft informatie over een bepaalde speler, beheerders kunnen de inventaris van een speler zien door ""yes"" toe te voegen als een tweede argument
 meltdown_get=Haalt de status van meltdown op.
 meltdown_set=Stelt de status van meltdown in.
