--- a/locale/no/redmew_command_text.cfg
+++ b/locale/no/redmew_command_text.cfg
@@ -16,7 +16,7 @@ find=Viser et varsel på kartet der spilleren befinner seg
 show_rail_block=Bytter mellom jernbane blokkvisualisering.
 server_time=Viser server tiden.
 seeds=Oppgi seeds på alle overflater
-redmew_version=Viser versjonen til RedMew scenario
+redmew_version=Viser versjonen til Diggy scenario
 whois=gir informasjon om en bestemt spiller, admins kan se baggen til en spiller ved å legge til ""ja"" som et sekundært argument
 meltdown_get=Henter statusen av nedsmelting.
 meltdown_set=Setter statusen av nedsmelting.
