--- a/locale/pt-BR/redmew_command_text.cfg
+++ b/locale/pt-BR/redmew_command_text.cfg
@@ -16,7 +16,7 @@ find=Mostra um alerta no mapa onde o jogador está localizado
 show_rail_block=Alterna a visualização de blocos ferroviários.
 server_time=Imprime a hora do servidor.
 seeds=Lista as seeds de todas as superfícies
-redmew_version=Imprime a versão do cenário Redmew
+redmew_version=Imprime a versão do cenário Diggy
 whois=fornece informações sobre um determinado jogador, administradores podem ver o inventário de um jogador adicionando ""sim"" como um segundo argumento
 meltdown_get=Obtém o status do Derretimento Nuclear.
 meltdown_set=Define o status do Derretimento Nuclear.
