--- a/locale/ru/redmew_command_text.cfg
+++ b/locale/ru/redmew_command_text.cfg
@@ -37,7 +37,7 @@ find=Отобразить на карте, где находится игрок
 show_rail_block=Переключает визуализацию ж/д блоков.
 server_time=Выводит время сервера.
 seeds=Список семян всех поверхностей
-redmew_version=Выводит версию сценария Redmew
+redmew_version=Выводит версию сценария Diggy
 whois=Предоставляет информацию о данном игроке, админы способны видеть инвентарь игрока, добавив ""yes"" вторым аргументом
 meltdown_get=Получает статус расплавления.
 meltdown_set=Устанавливает статус расплавления.
