--- a/locale/tr/redmew_command_text.cfg
+++ b/locale/tr/redmew_command_text.cfg
@@ -14,7 +14,7 @@ find=Haritada oyuncunun bulunduğu alanda bir uyarı gösterir
 show_rail_block=Demiryolu bloğu canlandırmasını açıp kapatır.
 server_time=Sunucunun zamanını yazdırır.
 seeds=Tüm yüzeylerin seed'lerini listele
-redmew_version=Redmew senaryosunun sürümünü yazdırır
+redmew_version=Diggy senaryosunun sürümünü yazdırır
 meltdown_get=Erimenin durumunu alır.
 meltdown_set=Erimenin durumunu ayarlar.
 performance_scale_get=Mevcut performans ölçeğini gösterir.
