--- a/locale/uk/redmew_command_text.cfg
+++ b/locale/uk/redmew_command_text.cfg
@@ -36,7 +36,7 @@ find=Відобразити на карті де знаходиться грав
 show_rail_block=Включити візуалізацію блоків залізниці.
 server_time=Виводить час серверу.
 seeds=Список насіння всіх поверхонь
-redmew_version=Надрукувати версію Redmew сценарію
+redmew_version=Надрукувати версію Diggy сценарію
 whois=Надати інформацію про даного гравця, адміни здатні бачити інвентар гравця додавши ""так"" другим аргументом
 meltdown_get=Отримує статус розпаду.
 meltdown_set=Встановлює статус розпаду.
