--- a/locale/zh-CN/redmew_command_text.cfg
+++ b/locale/zh-CN/redmew_command_text.cfg
@@ -37,7 +37,7 @@ find=在地图的玩家当前坐标点上显示一个警告。
 show_rail_block=切换铁路区块视觉化。
 server_time=显示服务器当前时间。
 seeds=列出所有图层的种子
-redmew_version=打印Redmew 场景版本号
+redmew_version=打印Diggy 场景版本号
 whois=显示制定玩家信息，添加第二参数“yes”可以查看当前玩家背包。
 meltdown_get=获取熔毁状态。
 meltdown_set=设置熔毁状态。
