--- a/locale/de/redmew_command_text.cfg
+++ b/locale/de/redmew_command_text.cfg
@@ -11,7 +11,7 @@ afk=Zeigt an, wie lange Spieler bereits AFK waren.
 zoom=Setzt deinen Zoom.
 find=Zeigt eine Warnung auf der Karte an, an der sich der Spieler befindet
 server_time=Gibt die Zeit des Servers aus.
-redmew_version=Gibt die Version des RedMew-Szenarios aus
+redmew_version=Gibt die Version des Diggy-Szenarios aus
 whois=liefert Informationen über einen bestimmten Spieler, Administratoren können das Inventar eines Spielers sehen, indem Sie ""Ja"" als zweites Argument hinzufügen
 market=Platziert einen Markt in Ihrer Nähe. Benutze /market removeall, um alle Märkte auf einer Karte zu entfernen
 lazy_bastard_bootstrap=Legt die Mindestanforderungen für den Start fest
