--- a/locale/en/redmew_command_text.cfg
+++ b/locale/en/redmew_command_text.cfg
@@ -61,7 +61,7 @@ find=Shows an alert on the map where the player is located
 show_rail_block=Toggles rail block visualisation.
 server_time=Prints the server's time.
 seeds=List the seeds of all surfaces
-redmew_version=Prints the version of the Redmew scenario
+redmew_version=Prints the version of the Diggy scenario
 whois=Provides information about a given player, admins can see the inventory of a player by adding "yes" as a second argument
 clear_corpses=Clears corpses near the player (Regular or higher). Use /clear_corpses surface or /clear_corpses s to clear all corpses on the surface (Admin only).
 meltdown_get=Gets the status of meltdown.
