Fix  #1518: looting alert (#1520)

--- a/locale/en/redmew_features.cfg
+++ b/locale/en/redmew_features.cfg
@@ -274,3 +274,7 @@ lua_description=Onboarding on lua console tool
 lua_input=Text area to craft some spicy commands
 lua_output=Result of the commands and buttons to dry-run the command (test syntax) and execute command (test+execute instructions)
 empty_entry=No item selected. Please select an item to view its information overview.
+
+[corpse]
+looting=__1__ is looting __2__`s corpse. [gps=__3__,__4__,__5__]
+looted=__1__ has looted __2__`s corpse. [gps=__3__,__4__,__5__]
