Update player quickbars commands to 2.0 (#1528)

--- a/locale/en/redmew_features.cfg
+++ b/locale/en/redmew_features.cfg
@@ -148,9 +148,11 @@ incompatible_item=Incompatible item found in saved data and will not be loaded: 
 [player_logistic_requests]
 save_bars=Your logistic requests have been saved to the server.
 load_bars=Attempting to load logistic requests from server...
+load_bars_success=...logistic requests load complete.
 delete_bars=Saved data has been removed from the server.
 logistics_not_available=Command failed: player`s logistics not available
 incompatible_item=Incompatible item found in saved data and will not be loaded: __1__
+invalid_logistic_point=Command failed: invalid player`s logistics
 
 [player_stats]
 rocks_smashed=Rocks smashed
